# STPPPP

./: CMakeLists.txt
src/: Candlestick.cpp  Candlestick.h  Simulator.cpp  Simulator.h  StocasticOscillator.cpp  StocasticOscillator.h  Trading.cpp  Trading.h  Visualise.cpp  Visualise.h  main.cpp  matplotlibcpp.h
